--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,10 +7,9 @@ html {
 }
 
 body {
-    height: 900px;
     font-size: 1.6rem;
     font-family: "Poppins", sans-serif;
-    line-height: 1.8em;
+    line-height: 1.7em;
     color: #5F5B53;
     background-color: #FFFCF4;
 }
@@ -29,6 +28,15 @@ h1 {
     line-height: 1.2em;
     letter-spacing: -2px;
     color: #171100;
+}
+
+h2 {
+ font-size: 3.8rem;
+ font-family: Sen;
+ font-weight: 700;
+ line-height: 1.25em;
+ letter-spacing: -1px;
+ color: #171100;
 }
 
 a {
@@ -59,6 +67,13 @@ p {
     color: #5F5B53;
     font-size: 1.8rem;
     line-height: 1.7em;
+}
+
+.line-clamp {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
 }
 
 /* header */
@@ -109,6 +124,7 @@ p {
     display: flex;
     align-items: center;
     margin-top: 52px;
+    margin-bottom: 65px;
     gap: 30px;
 }
 
@@ -124,7 +140,7 @@ p {
     top: 393px;
     width: 270px;
     max-height: 100%;
-    padding: 24px 28px;
+    padding: 24px;
     border-radius: 12px;
     box-shadow: 0px 16px 32px rgba(0, 0, 0, 0.05);
     background: white;
@@ -136,11 +152,26 @@ p {
 }
 
 .icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-right: 16px;
 }
 
-.item:not(:last-child)  {
-    margin-bottom: 14px;
+.item:not(:first-child)  {
+    margin-top: 14px;
+}
+
+.media-block .hero-summary .label {
+    font-size: 1.4rem;
+    line-height: 1.7em;
+}
+
+.media-block .hero-summary .title {
+ font-size: 1.8rem;
+ font-weight: 600;
+ line-height: 1.7em;
+ color: #171100;
 }
 
 .content-block {
@@ -216,4 +247,139 @@ p {
     line-height: 1.25em;
     margin-right: 8px;
     color: #171100;
+}
+
+/* Popular */
+
+.popular {
+    display: flex;
+    align-items: center;
+    background-color: white;
+    padding: 200px 0;
+}
+
+.popular .info {
+    width: 40%;
+}
+
+/* Popular > Popular-top */
+.popular-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.slide-btn {
+    display: flex;
+    align-items: center;
+    gap: 18px;
+}
+
+.slide-btn .bi {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 17px;
+    width: 12px;
+    height: 12px;
+    right: auto;
+    color: #FFB900;
+    border: solid 1px #FFB900;
+    border-radius: 50%;
+}
+
+.slide-btn .bi:hover {
+    color: white;
+    background-color: #f1ad01;
+    cursor: pointer;
+}
+
+.slide-btn .active {
+    color: white;
+    background-color: #FFB900;
+}
+
+/* Popular > List courses */
+.list-courses {
+    display: flex;
+    margin-top: 55px;
+    gap: 30px;
+}
+
+.courses-item {
+    flex: 1;
+    border: 1px solid #E2DFDA;
+    border-radius: 12px;
+}
+
+.courses-item:hover {
+    box-shadow: 0px 18px 36px 0px #0000000D;
+    border: 1px solid transparent;
+}
+
+.courses-name {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.courses-item .title {
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.7em;
+    color: #171100;
+}
+
+.img-courses {
+    width: calc(100% + 2px);
+    border-radius: 12px 12px 0 0;
+    margin: -1px;
+    aspect-ratio: 4 / 3;
+    object-fit: cover;
+    overflow: hidden;
+}
+
+.info-courses {
+    padding: 16px 22px 22px;
+}
+
+.stars {
+    color: #FEA31B;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 1.8em;
+    margin-right: 8px;
+}
+
+.list-courses .desc {
+    font-size: 1.4rem;
+    line-height: 1.9em;
+    margin-top: 6px;
+}
+
+.price {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 12px;
+}
+
+.price .pricing {
+    font-weight: 600;
+    font-size: 1.8rem;
+    line-height: 1.7em;
+    color: #171100;
+}
+
+.cta {
+    font-weight: 600;
+    font-size: 1.4rem;
+    line-height: 1.8em;
+    text-align: center;
+    padding: 12px 24px;
+    margin-left: 8px;
+}
+
+.cta:hover {
+    background: #FEA31B;
 }
