--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -119,6 +119,10 @@ p {
     border-radius: 1px;
 }
 
+.word-break {
+    word-break: break-all;
+}
+
 /* Hero content */
 .hero .body {
     display: flex;
@@ -383,3 +387,136 @@ p {
 .cta:hover {
     background: #FEA31B;
 }
+
+/* Feedback */
+.feedback {
+    background: #2E2100;
+    padding: 96px 0;
+}
+
+.feedback-list {
+    display: flex;
+    align-items: flex-start;
+    overflow: hidden;
+}
+
+.feedback .feedback-item {
+    display: flex;
+    flex-shrink: 0;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    gap: 30px;
+}
+
+.user-info .avar {
+    width: 72px;
+    height: 72px;
+    border-radius: 50%;
+}
+
+.user-info .username {
+    font-family: Sen;
+    font-weight: 700;
+    font-size: 2.4rem;
+    line-height: 1.4em;
+    color: #F7F7F7;
+    margin-top: 18px;
+}
+
+.user-info .profession {
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 1.9em;
+    color: #BFBCB2;
+    margin-top: 4px;
+}
+
+.user-info .slide-btn {
+    width: 6px;
+    height: 6px;
+    gap: 6px;
+    margin-top: 28px;
+}
+
+.quote {
+    width: 66%;
+}
+
+.quote blockquote {
+    font-weight: 400;
+    font-style: italic;
+    font-size: 2.6rem;
+    line-height: 1.54em;
+    color: white;
+}
+
+/* Features */
+.features {
+    padding: 200px 0 100px;
+    background: white;
+}
+
+.features .body {
+    display: flex;
+    align-items: center;
+}
+
+.features .images {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+.features .images img {
+    width: 270px;
+    height: 404px;
+    object-fit: cover;
+    overflow: hidden;
+    border-radius: 12px;
+}
+
+.images .left-img {
+    margin-top: 34px;
+}
+
+.images .right-img {
+    margin-bottom: 34px;
+}
+
+.features .content-block .desc {
+    margin-top: 16px;
+}
+
+.content-block .see {
+    margin-top: 32px;
+}
+
+/* CTA */
+.cta-block {
+    padding: 100px 0 200px;
+    background: white;
+}    
+
+.cta-block .content .body {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 0 30px;
+}
+
+.cta-block .content-block {
+    padding-left: 0px;
+    width: 50%;
+}
+
+.cta-img {
+    width: 470px;
+    height: 440px;
+    object-fit: cover;
+    overflow: hidden;
+    border-radius: 12px;
+}
+
+/* Our Blog */
